--- a/index.html
+++ b/index.html
@@ -1,13 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-2</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+        <link rel="stylesheet" href="style.css">
+  
 </head>
-<body>
 
-    <h1>Assignment-2</h1>
-    <h2>azim lingkon</h2>
+<body>
+    <header class="container">
+        <nav  class="navbar navbar-expand-lg navbar-light nav-color">
+            <div class="container-fluid">
+              <a class="navbar-brand penguin-navimg" href="#">
+                  <img  class="img-thumbnail nav-color border-0"  src="images/Logo, Icon/logo.png" alt="">
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div  class="navbar-nav fs-5">
+                  <a class="nav-link active " aria-current="page" href="#">Home</a>
+                  <a class="nav-link " href="#">Product</a>
+                  <a class="nav-link " href="#">About Us</a>
+                  <a class="nav-link " href="#" tabindex="-1" aria-disabled="true">Contact Us</a>
+                </div>
+              </div>
+            </div>
+          </nav>
+
+          <section class="nav-color">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="row">
+                        <div class="col-md-7">
+
+                        </div>
+                        <div class="col-md-5">
+
+                        </div>
+                    </div>
+
+                  <class class="carousel-item active">
+
+
+                    <div class="row">
+                        <div class="col-md-7"></div>
+                        <div class="col-md-5">
+                            <img src="images/Image/imageH.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                  </class>
+                </div>
+              </div>
+          </section>
+
+
+          <main>
+            <section class="mt-5" >
+                <h3>WOMAN JACKET</h3>
+              <div class="row row-cols-1 row-cols-md-3 g-4">
+                  <div class="col">
+                    <div class="card h-100 shadow">
+                      <img style="height:500px;" src="images/Image/image 11.png" class="card-img-top w-25% p-4" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Supply 350</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                      </div>
+                      <div class="card-footer">
+                        <button class="btn btn-warning">Buy Now >></button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card h-100 shadow">
+                      <img style="height:500px;" src="images/Image/toppng 1.png" class="card-img-top w-25% p-5" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Nike 360</h5>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                      </div>
+                      <div class="card-footer">
+                          <button class="btn btn-warning">Buy Now >></button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card h-100 shadow">
+                      <img style="height:450px;" src="images/Image/vippng 1.png" class="card-img-top w-25% p-3" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Red Airmax</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                      </div>
+                      <div class="card-footer">
+                          <button class="btn btn-warning">Buy Now >></button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+            </section>
+          </main>
+
+    </header>
+    
+
+
+
+
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
