--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
+        <script src='https://kit.fontawesome.com/a076d05399.js'></script>
   
 </head>
 
@@ -23,7 +24,7 @@
               </button>
               
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div  class="navbar-nav fs-5">
+                <div  class="navbar-nav fs-5 ms-auto">
                   <a class="nav-link active " aria-current="page" href="#">Home</a>
                   <a class="nav-link " href="#">Product</a>
                   <a class="nav-link " href="#">About Us</a>
@@ -66,37 +67,47 @@
               <div class="row row-cols-1 row-cols-md-3 g-4">
                   <div class="col">
                     <div class="card h-100 shadow">
-                      <img style="height:500px;" src="images/Image/image 11.png" class="card-img-top w-25% p-4" alt="...">
+                      <img style="height:500px;" src="images/Image/image 11.png" class="card-img-top w-25% p-5 bg-secondary" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">Supply 350</h5>
+                        <h5 class="card-title">abc</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
                       </div>
                       <div class="card-footer">
-                        <button class="btn btn-warning">Buy Now >></button>
+                        <button class="btn btn-primary">
+                          <i class='fas fa-angle-double-right' style='font-size:15px'></i>
+                          Buy Now</button>
                       </div>
                     </div>
                   </div>
                   <div class="col">
                     <div class="card h-100 shadow">
-                      <img style="height:500px;" src="images/Image/toppng 1.png" class="card-img-top w-25% p-5" alt="...">
+                      <img style="height:500px;" src="images/Image/toppng 1.png" class="card-img-top w-25% p-5 bg-secondary" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">Nike 360</h5>
+                        <h5 class="card-title">abc</h5>
                         <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                       </div>
                       <div class="card-footer">
-                          <button class="btn btn-warning">Buy Now >></button>
+                          <button class="btn btn-primary">
+                            <i class='fas fa-angle-double-right' style='font-size:15px'></i>
+                            Buy Now</button>
                       </div>
                     </div>
                   </div>
                   <div class="col">
                     <div class="card h-100 shadow">
-                      <img style="height:450px;" src="images/Image/vippng 1.png" class="card-img-top w-25% p-3" alt="...">
+                      <img style="height:500px;" src="images/Image/vippng 1.png" class="card-img-top w-25% p-5 bg-secondary" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">Red Airmax</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                        <h5 class="card-title">abc</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
                       </div>
                       <div class="card-footer">
-                          <button class="btn btn-warning">Buy Now >></button>
+                        <div class="price d-flex">
+                          <h2>$ 123</h2>
+                          <button class="btn btn-primary">
+                            <i class='fas fa-angle-double-right' style='font-size:15px'></i>
+                            Buy Now</button>
+                        </div>
+                          
                       </div>
                     </div>
                   </div>
