--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Assignment-2</title>
+  <title>Azim Assignment-2</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
   <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 
 </head>
@@ -44,8 +46,8 @@
 
             <div class="row d-flex align-items-center p-5">
               <div class="col-md-7 ">
-                <h1 class="fs-1 bg-warning w-75 p-3">Be the Penguins of Winter</h1>
-                <p class="fs-5">Lorem Ipsum is simply dummy text of the printing 
+                <h1 class="fs-1 rounded bg-warning w-75 p-3">Be the Penguins of Winter</h1>
+                <p class="fs-5">Lorem Ipsum is simply dummy text of the printing
                   and typesetting industry.</p>
 
                 <button class="btn btn-warning p-lg-3 fs-4">
@@ -67,15 +69,15 @@
         <h1 class="p-3">Man Jacket</h1>
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
-            <div class="card h-100 shadow">
-              <img style="height:500px;" src="images/Image/image 11.png" class="card-img-top w-25% p-5 bg-secondary"
+            <div class="card h-100 shadow penguin-card">
+              <img style="height:500px;" src="images/Image/image 11.png" class="card-img-top w-25% p-5 bg-light"
                 alt="...">
               <div class="card-body">
                 <h2 class="card-title">Snowboard Jacket Mens</h2>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
                   additional.</p>
               </div>
-              <div class="card-footer">
+              <div class="card-footer penguin-card-footer">
                 <div class="price d-flex">
                   <h2 class="text-warning">$123 </h2>
                   <button class="btn btn-primary ms-auto">
@@ -86,14 +88,14 @@
             </div>
           </div>
           <div class="col">
-            <div class="card h-100 shadow">
-              <img style="height:500px;" src="images/Image/toppng 1.png" class="card-img-top w-25% p-5 bg-secondary"
+            <div class="card h-100 shadow penguin-card">
+              <img style="height:500px;" src="images/Image/toppng 1.png" class="card-img-top w-25% p-5 bg-light"
                 alt="...">
               <div class="card-body">
                 <h2 class="card-title">Man Casual Jackets</h2>
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
               </div>
-              <div class="card-footer">
+              <div class="card-footer penguin-card-footer">
                 <div class="price d-flex">
                   <h2 class="text-warning">$123</h2>
                   <button class="btn btn-primary ms-auto">
@@ -104,15 +106,15 @@
             </div>
           </div>
           <div class="col">
-            <div class="card h-100 shadow">
-              <img style="height:500px;" src="images/Image/vippng 1.png" class="card-img-top w-25% p-5 bg-secondary"
+            <div class="card h-100 shadow penguin-card">
+              <img style="height:500px;" src="images/Image/vippng 1.png" class="card-img-top w-25% p-5 bg-light"
                 alt="...">
               <div class="card-body">
                 <h2 class="card-title">Man Leather Jackets</h2>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                   content.</p>
               </div>
-              <div class="card-footer">
+              <div class="card-footer penguin-card-footer">
                 <div class="price d-flex">
                   <h2 class="text-warning">$123</h2>
                   <button class="btn btn-primary ms-auto">
@@ -135,15 +137,15 @@
         <h1 class="p-3">WOMAN JACKET</h1>
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
-            <div class="card h-100 shadow">
-              <img style="height:500px;" src="images/Image/SeekPng 1.png" class="card-img-top w-25% p-5 bg-secondary"
+            <div class="card h-100 shadow penguin-card">
+              <img style="height:500px;" src="images/Image/SeekPng 1.png" class="card-img-top w-25% p-5 bg-light"
                 alt="...">
               <div class="card-body">
                 <h2 class="card-title">Yellow Coat Jacket </h2>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
                   additional.</p>
               </div>
-              <div class="card-footer">
+              <div class="card-footer penguin-card-footer">
                 <div class="price d-flex">
                   <h2 class="text-warning">$123 </h2>
                   <button class="btn btn-primary ms-auto">
@@ -154,14 +156,14 @@
             </div>
           </div>
           <div class="col">
-            <div class="card h-100 shadow">
-              <img style="height:500px;" src="images/Image/image 15.png" class="card-img-top w-25% p-5 bg-secondary"
+            <div class="card h-100 shadow penguin-card">
+              <img style="height:500px;" src="images/Image/image 15.png" class="card-img-top w-25% p-5 bg-light"
                 alt="...">
               <div class="card-body">
                 <h2 class="card-title">Woman Leather Jacket </h2>
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
               </div>
-              <div class="card-footer">
+              <div class="card-footer penguin-card-footer">
                 <div class="price d-flex">
                   <h2 class="text-warning">$123</h2>
                   <button class="btn btn-primary ms-auto">
@@ -172,15 +174,15 @@
             </div>
           </div>
           <div class="col">
-            <div class="card h-100 shadow">
+            <div class="card h-100 shadow penguin-card">
               <img style="height:500px;" src="images/Image/PngItem_2597366 1.png"
-                class="card-img-top w-25% p-5 bg-secondary" alt="...">
+                class="card-img-top w-25% p-5 bg-light" alt="...">
               <div class="card-body">
                 <h2 class="card-title">Ladies Jacket </h2>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                   content.</p>
               </div>
-              <div class="card-footer">
+              <div class="card-footer penguin-card-footer">
                 <div class="price d-flex">
                   <h2 class="text-warning">$123</h2>
                   <button class="btn btn-primary ms-auto">
@@ -193,16 +195,85 @@
           </div>
         </div>
       </section>
-
-
-
-
-
     </main>
 
   </header>
 
+  <main>
+    <section class="container overflow-hidden mt-5 p-5">
+      <div class="row gx-5">
 
+        <div class="col">
+          <div class="box gy-5 d-flex align-items-center shadow mt-3 rounded-3">
+            <div class="box-img w-25 ">
+              <img class="w-100 p-3" src="images/Logo, icon/image 12.png" alt="">
+             </div>
+             <div class="box-text  p-2">
+               <h2>Find the Perfect Fit</h2>
+               <p>Everybody is different, which is why we
+                offer styles for every body.</p>
+             </div>
+           </div>
+
+           <div class="box gy-5 d-flex align-items-center shadow mt-3 rounded-3">
+            <div class="box-img w-25">
+              <img class="w-100 p-3" src="images/Logo, icon/image 13.png" alt="">
+             </div>
+             <div class="box-text p-2">
+               <h2>Free Exchanges</h2>
+               <p>Everybody is different, which is why we
+                offer styles for every body.</p>
+             </div>
+           </div>
+
+           <div class="box gy-5 d-flex align-items-center shadow mt-3 rounded-3">
+             <div class="box-img w-25">
+              <img class="w-100 p-3" src="images/Logo, icon/image 14.png" alt="">
+             </div>
+             
+             <div class="box-text p-2">
+               <h2>Contact Our Seller</h2>
+               <p>Everybody is different, which is why we
+                offer styles for every body.</p>
+             </div>
+           </div>
+        </div>
+
+        <div class="col">
+          <div class=" mt-5">
+            <img class="w-100" src="images/Logo, Icon/XMLID 1.png" alt="">
+          </div>
+
+
+
+        </div>
+      </div>
+    </section>
+  </main>
+
+
+
+
+
+
+
+
+
+
+  <section style="height: 300px; " class=" m-auto w-75 mt-5 bg-info d-flex justify-content-center align-items-center ">
+    <div>
+        <h1>LET'S STAY IN TOUCH</h1>
+    <h5>Get updates on sales, specials and more</h5>
+    <input type="text" placeholder="Enter your email">
+    <button class="btn btn-warning" >SUBMIT</button>
+    </div>
+    
+
+</section>
+</main>
+<footer class="text-center mt-5 p-5">
+<small  >©2020. Penguin Fashion E-Commerce. All rights reserved. Sofia, Bulgaria.</small>
+</footer>
 
 
 
