update 3rd time

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav fs-5 ms-auto">
             <a class="nav-link active " aria-current="page" href="#">Home</a>
-            <a class="nav-link " href="#">Product</a>
-            <a class="nav-link " href="#">About Us</a>
-            <a class="nav-link " href="#" tabindex="-1" aria-disabled="true">Contact Us</a>
+            <a class="nav-link " href="#Man-Jacket">Man Jacket</a>
+            <a class="nav-link " href="#WOMAN-JACKET">Woman jacket</a>
+            <a class="nav-link " href="#Contact-Us" tabindex="-1" aria-disabled="true">Contact Us</a>
           </div>
         </div>
       </div>
@@ -65,7 +65,7 @@
 
 
     <main>
-      <section class="mt-5">
+      <section id="Man-Jacket" class="mt-5">
         <h1 class="p-3">Man Jacket</h1>
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
@@ -133,7 +133,7 @@
 
 
 
-      <section class="mt-5">
+      <section id="WOMAN-JACKET" class="mt-5">
         <h1 class="p-3">WOMAN JACKET</h1>
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
@@ -200,43 +200,43 @@
   </header>
 
   <main>
-    <section class="container overflow-hidden mt-5 p-5">
+    <section class=" rules-and-regulation container overflow-hidden mt-5 p-5">
       <div class="row gx-5">
 
         <div class="col">
-          <div class="box gy-5 d-flex align-items-center shadow mt-3 rounded-3">
+          <div class="box gy-5 d-flex align-items-center shadow mt-3 rounded-3 responsive-Box">
             <div class="box-img w-25 ">
-              <img class="w-100 p-3" src="images/Logo, icon/image 12.png" alt="">
-             </div>
-             <div class="box-text  p-2">
-               <h2>Find the Perfect Fit</h2>
-               <p>Everybody is different, which is why we
+              <img class="w-100 p-3 responsive-Img" src="images/Logo, icon/image 12.png" alt="">
+            </div>
+            <div class="box-text  p-2 responsive-Text">
+              <h2>Find the Perfect Fit</h2>
+              <p>Everybody is different, which is why we
                 offer styles for every body.</p>
-             </div>
-           </div>
+            </div>
+          </div>
 
-           <div class="box gy-5 d-flex align-items-center shadow mt-3 rounded-3">
+          <div class="box gy-5 d-flex align-items-center shadow mt-3 rounded-3 responsive-Box">
             <div class="box-img w-25">
               <img class="w-100 p-3" src="images/Logo, icon/image 13.png" alt="">
-             </div>
-             <div class="box-text p-2">
-               <h2>Free Exchanges</h2>
-               <p>Everybody is different, which is why we
+            </div>
+            <div class="box-text p-2 responsive-Text">
+              <h2>Free Exchanges</h2>
+              <p>Everybody is different, which is why we
                 offer styles for every body.</p>
-             </div>
-           </div>
+            </div>
+          </div>
 
-           <div class="box gy-5 d-flex align-items-center shadow mt-3 rounded-3">
-             <div class="box-img w-25">
-              <img class="w-100 p-3" src="images/Logo, icon/image 14.png" alt="">
-             </div>
-             
-             <div class="box-text p-2">
-               <h2>Contact Our Seller</h2>
-               <p>Everybody is different, which is why we
+          <div class="box gy-5 d-flex align-items-center shadow mt-3 rounded-3 responsive-Box">
+            <div class="box-img w-25">
+              <img class="w-100 p-3 " src="images/Logo, icon/image 14.png" alt="">
+            </div>
+
+            <div class="box-text p-2 responsive-Text">
+              <h2>Contact Our Seller</h2>
+              <p>Everybody is different, which is why we
                 offer styles for every body.</p>
-             </div>
-           </div>
+            </div>
+          </div>
         </div>
 
         <div class="col">
@@ -260,20 +260,21 @@
 
 
 
-  <section style="height: 300px; " class=" m-auto w-75 mt-5 bg-info d-flex justify-content-center align-items-center ">
-    <div>
-        <h1>LET'S STAY IN TOUCH</h1>
-    <h5>Get updates on sales, specials and more</h5>
-    <input type="text" placeholder="Enter your email">
-    <button class="btn btn-warning" >SUBMIT</button>
+  <section id="Contact-Us" style="height: 300px; "
+    class=" m-auto w-75 mt-5 bg-info d-flex justify-content-center align-items-center ">
+    <div class="p-5">
+      <h1>LET'S STAY IN TOUCH</h1>
+      <h5>Get updates on sales, specials and more</h5>
+      <input type="text" placeholder="Enter your email">
+      <button class="btn btn-warning">SUBMIT</button>
     </div>
-    
 
-</section>
-</main>
-<footer class="text-center mt-5 p-5">
-<small  >©2020. Penguin Fashion E-Commerce. All rights reserved. Sofia, Bulgaria.</small>
-</footer>
+
+  </section>
+  </main>
+  <footer class="text-center mt-5 p-5">
+    <small>©2020. Penguin Fashion E-Commerce. All rights reserved. Sofia, Bulgaria.</small>
+  </footer>
 
 
 
