update 4th time

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               </div>
               <div class="card-footer penguin-card-footer">
                 <div class="price d-flex">
-                  <h2 class="text-warning">$123 </h2>
+                  <h2 class="text-warning">$5500 </h2>
                   <button class="btn btn-primary ms-auto">
                     <i class='fas fa-angle-double-right' style='font-size:15px'></i>
                     Buy Now</button>
@@ -97,7 +97,7 @@
               </div>
               <div class="card-footer penguin-card-footer">
                 <div class="price d-flex">
-                  <h2 class="text-warning">$123</h2>
+                  <h2 class="text-warning">$4500</h2>
                   <button class="btn btn-primary ms-auto">
                     <i class='fas fa-angle-double-right' style='font-size:15px'></i>
                     Buy Now</button>
@@ -116,7 +116,7 @@
               </div>
               <div class="card-footer penguin-card-footer">
                 <div class="price d-flex">
-                  <h2 class="text-warning">$123</h2>
+                  <h2 class="text-warning">$2200</h2>
                   <button class="btn btn-primary ms-auto">
                     <i class='fas fa-angle-double-right' style='font-size:15px'></i>
                     Buy Now</button>
@@ -147,7 +147,7 @@
               </div>
               <div class="card-footer penguin-card-footer">
                 <div class="price d-flex">
-                  <h2 class="text-warning">$123 </h2>
+                  <h2 class="text-warning">$1020 </h2>
                   <button class="btn btn-primary ms-auto">
                     <i class='fas fa-angle-double-right' style='font-size:15px'></i>
                     Buy Now</button>
@@ -165,7 +165,7 @@
               </div>
               <div class="card-footer penguin-card-footer">
                 <div class="price d-flex">
-                  <h2 class="text-warning">$123</h2>
+                  <h2 class="text-warning">$1250</h2>
                   <button class="btn btn-primary ms-auto">
                     <i class='fas fa-angle-double-right' style='font-size:15px'></i>
                     Buy Now</button>
@@ -184,7 +184,7 @@
               </div>
               <div class="card-footer penguin-card-footer">
                 <div class="price d-flex">
-                  <h2 class="text-warning">$123</h2>
+                  <h2 class="text-warning">$1080</h2>
                   <button class="btn btn-primary ms-auto">
                     <i class='fas fa-angle-double-right' style='font-size:15px'></i>
                     Buy Now</button>
@@ -201,14 +201,14 @@
 
   <main>
     <section class=" rules-and-regulation container overflow-hidden mt-5 p-5">
-      <div class="row gx-5">
+      <div class="row g-5">
 
         <div class="col">
           <div class="box gy-5 d-flex align-items-center shadow mt-3 rounded-3 responsive-Box">
             <div class="box-img w-25 ">
-              <img class="w-100 p-3 responsive-Img" src="images/Logo, icon/image 12.png" alt="">
+              <img class="w-100 p-3" src="images/Logo, icon/image 12.png" alt="">
             </div>
-            <div class="box-text  p-2 responsive-Text">
+            <div class="box-text  p-2">
               <h2>Find the Perfect Fit</h2>
               <p>Everybody is different, which is why we
                 offer styles for every body.</p>
@@ -219,7 +219,7 @@
             <div class="box-img w-25">
               <img class="w-100 p-3" src="images/Logo, icon/image 13.png" alt="">
             </div>
-            <div class="box-text p-2 responsive-Text">
+            <div class="box-text p-2">
               <h2>Free Exchanges</h2>
               <p>Everybody is different, which is why we
                 offer styles for every body.</p>
@@ -228,11 +228,11 @@
 
           <div class="box gy-5 d-flex align-items-center shadow mt-3 rounded-3 responsive-Box">
             <div class="box-img w-25">
-              <img class="w-100 p-3 " src="images/Logo, icon/image 14.png" alt="">
+              <img class="w-100 p-3" src="images/Logo, icon/image 14.png" alt="">
             </div>
 
-            <div class="box-text p-2 responsive-Text">
-              <h2>Contact Our Seller</h2>
+            <div class="box-text p-2">
+              <h2 >Contact Our Seller</h2>
               <p>Everybody is different, which is why we
                 offer styles for every body.</p>
             </div>
