--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <img style="height:500px;" src="images/Image/image 11.png" class="card-img-top w-25% p-5 bg-light"
                 alt="...">
               <div class="card-body">
-                <h2 class="card-title">Snowboard Jacket Mens</h2>
+                <h2 class="card-title">Snowboard Jacket</h2>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
                   additional.</p>
               </div>
@@ -107,7 +107,7 @@
               
             </div>
           </div>
-          
+
           <div class="col">
             <div class="card h-100 shadow penguin-card">
               <img style="height:500px;" src="images/Image/vippng 1.png" class="card-img-top w-25% p-5 bg-light"
